styles/content/lots.css
.lots {
  padding: 180px 50px 0;
  display: flex;
  flex-direction: column;
  gap: 25px
  /* letter-spacing: 0; */
}

.lots__heading {
  /* 0 40px 27px; */
  padding: 0 40px;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
}

.lots__card {
  width: 100%;
}

.lots__card-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 25px;
  list-style: none;
}

.lots__card-list-item {
  line-height: 1.2;
}

.card-link {
  display: block;
  width: 100%;
  text-decoration: none;
  color: #fff;
}

.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-content: center;
  flex-grow: 1;
  min-height: 450px;
  width: 430px;
  /* fixme: remove border after put background img */
  border: 1px solid #000;
}

.card::before {
  z-index: 0;
  position: absolute;
  inset: 0;
  content: '';
  background-color: rgba(0, 0, 0, 0.6);
}

.card-type-film {
  background: no-repeat center/cover url('../../images/card-lot-01.jpg');
}

.card-type-book {
  background: no-repeat center/cover url('../../images/card-lot-02.jpg');
}

.card-type-picture {
  background: no-repeat center/cover url('../../images/card-lot-03.jpg');
}

.card__title {
  position: relative;
  padding: 50px 40px 0;
  font-size: 22px;
  text-transform: uppercase;
  text-decoration: underline;
}

.card__text {
  position: relative;
  padding: 0 40px 50px;
  font-size: 20px;
}

.lots__look-more-link {
  padding-left: 40px;
  font-size: 20px;
  text-decoration: underline;
  text-underline-offset: 17%;
}

